# ant-farm

./: CMakeLists.txt  Game.cpp  Game.h  MyGame.cpp  MyGame.h  main.cpp
Assets/: StaticAssetLoader.cpp  StaticAssetLoader.h
Components/: Ant.cpp  Ant.h  Tile.cpp  Tile.h
Engine/: Game.cpp  Game.h  SceneManager.cpp  SceneManager.h
Engine/Assets/: AssetLoaderInterface.h  TextureManager.cpp  TextureManager.h
Engine/Components/: AnimationComponent.cpp  AnimationComponent.h  ComponentInterface.h  TextureComponent.cpp  TextureComponent.h  TiledTextureComponent.cpp  TiledTextureComponent.h
Engine/Events/: EventBus.cpp  EventBus.h  EventInterface.h  EventListenerInterface.h  EventMessage.h  EventType.h  InputEvent.cpp  InputEvent.h  LoadTextureEvent.cpp  LoadTextureEvent.h  LogEVent.cpp  LogEVent.h  MouseEvent.cpp  MouseEvent.h  RenderEvent.cpp  RenderEvent.h  RenderFrameEvent.cpp  RenderFrameEvent.h
Engine/Math/: Vector2d.h
Engine/Objects/: GameObject.cpp  GameObject.h
Engine/State/: GameState.cpp  GameState.h
Engine/System/: InputHandler.cpp  InputHandler.h  LogEnums.h  Logger.cpp  Logger.h
Engine/ValueObjects/: Dimension2d.h  Frame.h  Position2d.h  Vector2D.h
Engine/utils/: fps.h
Events/: BuildEvent.cpp  BuildEvent.h  EventMessage.h  MineEvent.cpp  MineEvent.h
GameObject/: Map.cpp  Map.h  TileObject.cpp  TileObject.h
Jobs/: JobInterface.cpp  JobInterface.h  JobManager.cpp  JobManager.h  MineJob.cpp  MineJob.h
Layer/: CharacterLayer.cpp  CharacterLayer.h  LayerInterface.h  LayerManager.h  MapLayer.cpp  MapLayer.h  OverlayLayer.h
System/: ServiceContainer.cpp  ServiceContainer.h
assets/: Ui.xcf  characters.xcf  ground.xcf  tiles.xcf
